# table-aware-processing

./: .gitignore  README.md  gen_examples.py  pyproject.toml  requirements.txt  run_demo.py
examples/: primer_2.xlsx
src/: models.py
src/chunking/: table_chunker.py  text_projection.py
src/load/: csv_parser.py  encoding_detection.py  header_detection.py  models.py  regions.py  table_parser.py  type_inference.py  xlsx_parser.py
test/: 1.py
tests/: test_chunking.py  test_csv_parser.py  test_header_detection.py  test_regions.py  test_text_projection.py  test_type_inference.py  test_xlsx_parser.py
