[project]
name = "table-aware-processing"
version = "0.2.0"
description = "Table-aware processing for XLSX/CSV with structure-preserving chunking for RAG."
requires-python = ">=3.10"
readme = "README.md"

[tool.ruff]
line-length = 110
target-version = "py310"
extend-exclude = [".venv", "output", "examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]
ignore = [
    "E501",   # line length is enforced by formatter
    "B008",   # default mutable argument warnings — pydantic Field() is fine
    "RUF001", # ambiguous Cyrillic in strings — project uses Russian text on purpose
    "RUF002", # ambiguous Cyrillic in docstrings
    "RUF003", # ambiguous Cyrillic in comments
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
